force-app/main/default/objects/ffr__XXXSummarization__c/ffr__XXXSummarization__c.object-meta.xml
<CustomObject>
    <description>For internal use only.</description>
    <label>XXX Summarization</label>
    <nameField>
        <displayFormat>XSUM{000000}</displayFormat>
        <label>Summarization Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>XXX Summarizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>