force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__AgedBand01__c.field-meta.xml
<CustomField>
    <fullName>ffr__AgedBand01__c</fullName>
    <label>Aged Band 01</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>