force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__AgedBand03__c.field-meta.xml
<CustomField>
    <fullName>ffr__AgedBand03__c</fullName>
    <label>Aged Band 03</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>