force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__AgedBand05Count__c.field-meta.xml
<CustomField>
    <fullName>ffr__AgedBand05Count__c</fullName>
    <label>Aged Band 05 Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>