force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__Dated__c.field-meta.xml
<CustomField>
    <fullName>ffr__Dated__c</fullName>
    <label>Dated</label>
    <type>Date</type>
</CustomField>