force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__EMail__c.field-meta.xml
<CustomField>
    <fullName>ffr__EMail__c</fullName>
    <label>EMail</label>
    <type>Email</type>
</CustomField>