force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__ForecastValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__ForecastValue__c</fullName>
    <label>Forecast Value</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>