force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__GeoLocationDecimal__c.field-meta.xml
<CustomField>
    <fullName>ffr__GeoLocationDecimal__c</fullName>
    <label>GeoLocation Decimal</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>