force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__NetValue__c.field-meta.xml
<CustomField>
    <fullName>ffr__NetValue__c</fullName>
    <label>Net Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>