force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__Percent__c.field-meta.xml
<CustomField>
    <fullName>ffr__Percent__c</fullName>
    <label>Percent</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>