force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__Phone__c.field-meta.xml
<CustomField>
    <fullName>ffr__Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>