force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__RowCount__c.field-meta.xml
<CustomField>
    <fullName>ffr__RowCount__c</fullName>
    <label>Row Count</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>