force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__RunInstance__c.field-meta.xml
<CustomField>
    <fullName>ffr__RunInstance__c</fullName>
    <label>Run Instance</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>