force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__TextRich__c.field-meta.xml
<CustomField>
    <fullName>ffr__TextRich__c</fullName>
    <label>TextRich</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>