force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__Timing__c.field-meta.xml
<CustomField>
    <fullName>ffr__Timing__c</fullName>
    <description>Timing is everything</description>
    <label>Timing Is Everything</label>
    <type>DateTime</type>
</CustomField>