force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__TransactionCurrency__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransactionCurrency__c</fullName>
    <label>Transaction Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>