force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__TransactionDescription__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransactionDescription__c</fullName>
    <label>Transaction Description</label>
    <type>TextArea</type>
</CustomField>