force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__TransactionTotal__c.field-meta.xml
<CustomField>
    <fullName>ffr__TransactionTotal__c</fullName>
    <label>Transaction Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>