force-app/main/default/objects/ffr__XXXSummarization__c/fields/ffr__Type__c.field-meta.xml
<CustomField>
    <fullName>ffr__Type__c</fullName>
    <label>Type</label>
    <length>200</length>
    <type>Text</type>
</CustomField>